--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,134 @@ nav .active, nav a:hover{
     background-color: #39aee1;
     color: black;
 }
+
+#banner{
+    background-image: url('../images/img1.jpeg');
+    height: 670px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+}
+
+.column{
+    flex-direction: column;
+}
+
+.banner_headline{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner_options{
+    height: 210px;
+    display: flex;
+}
+
+.banner_headline h1{
+    color: #FFFF;
+    font-size: 70px;
+    text-shadow: 5px 5px 0px #5555;
+    max-width: 350px;
+}
+
+.banner_headline h2{
+    color: #FFFF;
+    font-size: 21px;
+    text-shadow: 0px 1px 0px #5555;
+    margin-top: 30px;
+}
+
+.banner1,.banner2,.banner3{
+    flex: 1;
+    color: #FFFF;
+    padding: 20px;
+
+}
+
+.banner1{
+    background-color: #39aee1;
+}
+
+.banner2{
+    background-color: #0079c7;
+}
+
+.banner3{
+    background-color: #2b4c99;
+}
+
+.banner_title{
+    font-size: 21px;
+}
+
+.banner_desc{
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.banner_options a{
+    border: 1px solid #FFFF;
+    text-decoration: none;
+    color: #FFFF;
+    font-size: 12px;
+    padding: 5px;
+}
+
+#geral{
+    display: flex;
+    justify-content: center;
+}
+
+.widget_title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.widget_title_text{
+   
+    font-size: 21px;
+    font-weight: bold;
+}
+.widget_title_bar{
+    width: 50px;
+    height: 5px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+}
+
+#rodape{
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+    color: #5c5c5c;
+    font-size: 15px;
+    padding: 30px;
+}
+
+@media (max-width: 800px){
+    .banner_headline h1{
+        font-size: 55px;
+        padding: 20px;
+    }
+
+    .banner_headline h2{
+        font-size: 17px;
+        padding: 20px;
+    }
+
+    .banner_options{
+        flex-direction: column;
+    }
+
+    #geral{
+        margin-top: 200px;
+    }
+
+    #rodape{
+        flex-direction: column;
+        padding: 20px;
+    }
+}
